--- a/docker-compose.metablockchain.yml
+++ b/docker-compose.metablockchain.yml
@@ -11,20 +11,16 @@ services:
     command: ./start.sh
     environment:
       - PYTHONPATH=/usr/src/app
-      - ENVIRONMENT=prod
-      - DB_HOST=mysql
+      - ENVIRONMENT=dev
+      - DB_HOST=host.docker.internal
       - DB_PORT=3306
       - DB_USERNAME=root
-      - DB_PASSWORD=root
-      - DB_NAME=polkascan
-      - SUBSTRATE_RPC_URL=wss://rpc.polkadot.io/
-      - SUBSTRATE_ADDRESS_TYPE=0
-      - TYPE_REGISTRY=polkadot
-      - SUBSTRATE_METADATA_VERSION=9
-      - SUBSTRATE_STORAGE_BALANCE=Account
-      - SUBSTRATE_STORAGE_INDICES=Accounts
-    depends_on:
-      - mysql
+      - DB_PASSWORD=Pasha111 # Change with configured password
+      - DB_NAME=metascan
+      - SUBSTRATE_RPC_URL=http://host.docker.internal:9933/
+      - SUBSTRATE_ADDRESS_TYPE=42
+      - TYPE_REGISTRY_FILE=app/type_registry/metablockchain_types.json
+      - SUBSTRATE_METADATA_VERSION=12
 
   harvester-api:
     build: harvester/.
@@ -33,30 +29,26 @@ services:
     volumes:
       - './harvester:/usr/src/app'
     command: ./start.sh
-    ports:
-    - 8001:8000
     environment: &env
       - CELERY_BROKER=redis://redis:6379/0
       - CELERY_BACKEND=redis://redis:6379/0
       - PYTHONPATH=/usr/src/app:/usr/src/app/py-substrate-interface/:/usr/src/app/py-scale-codec/
-      - ENVIRONMENT=prod
-      - DB_HOST=mysql
+      - ENVIRONMENT=dev
+      - DB_HOST=host.docker.internal
       - DB_PORT=3306
       - DB_USERNAME=root
-      - DB_PASSWORD=root
-      - DB_NAME=polkascan
-      - SUBSTRATE_RPC_URL=wss://rpc.polkadot.io/
-      - TYPE_REGISTRY=polkadot
-      - SUBSTRATE_ADDRESS_TYPE=0
-      - SUBSTRATE_METADATA_VERSION=9
+      - DB_PASSWORD=Pasha111 # Change with configured password
+      - DB_NAME=metascan
+      - SUBSTRATE_RPC_URL=http://host.docker.internal:9933/
+      - TYPE_REGISTRY_FILE=app/type_registry/metablockchain_types.json
+      - SUBSTRATE_ADDRESS_TYPE=42
+      - SUBSTRATE_METADATA_VERSION=12
       - NEW_SESSION_EVENT_HANDLER=True
       - SUBSTRATE_STORAGE_BALANCE=Account
       - SUBSTRATE_STORAGE_INDICES=Accounts
       - FINALIZATION_ONLY=1
-
     depends_on:
       - redis
-      - mysql
 
   harvester-worker:
     build: harvester/.
@@ -67,7 +59,6 @@ services:
     environment: *env
     depends_on:
       - redis
-      - mysql
 
   harvester-beat:
     build: harvester/.
@@ -75,7 +66,7 @@ services:
     volumes:
       - './harvester:/usr/src/app'
       - '/usr/src/app/data'
-    command: celery -A app.tasks beat --loglevel=INFO  --schedule="data/celerybeat-schedule" --pidfile="data/celerybeat.pid"
+    command: celery -A app.tasks beat --loglevel=INFO  --schedule="data/celerybeat-schedule" --pidfile=""
     environment: *env
     depends_on:
       - redis
@@ -83,7 +74,6 @@ services:
   harvester-monitor:
     build: harvester/.
     image: polkascan/pre-harvester:latest
-    environment: *env
     ports:
       - '5555:5555'
     command:  flower -A app.tasks --port=5555 --broker=redis://redis:6379/0
@@ -94,29 +84,18 @@ services:
     image: redis:3.2.11
     hostname: redis
 
-  mysql:
-    image: mysql:latest
-    hostname: mysql
-    volumes:
-      - 'db-data:/var/lib/mysql'
-    ports:
-      - '33061:3306'
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=polkascan
-
   explorer-gui:
     image: polkascan/pre-explorer-gui:latest
     build:
       context: explorer-gui/.
       args:
-        NETWORK_NAME: Polkadot CC1
-        NETWORK_ID: polkadot-cc1
+        NETWORK_NAME: Metablockchain
+        NETWORK_ID: dev
         NETWORK_TYPE: pre
         CHAIN_TYPE: relay
-        NETWORK_TOKEN_SYMBOL: DOT
-        NETWORK_TOKEN_DECIMALS: 12
-        NETWORK_COLOR_CODE: e6007a
+        NETWORK_TOKEN_SYMBOL: MUI
+        NETWORK_TOKEN_DECIMALS: 6
+        NETWORK_COLOR_CODE: 777777
         API_URL: http://127.0.0.1:8080/api/v1
     ports:
       - '8080:80'
@@ -128,6 +107,3 @@ services:
     image: polkasource/substrate-ui:polkadot-latest
     ports:
       - '8081:80'
-
-volumes:
-  db-data:
